[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/Game-Resolution/MenuSelecter_StartGame.png" type="Texture" id=2]

[node name="PauseMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
margin_left = 29.2531
margin_top = 24.4957
margin_right = 135.253
margin_bottom = 44.4957
text = "Resume Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 29.2531
margin_top = 49.9515
margin_right = 135.253
margin_bottom = 69.9515
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelecter_ResumeGame" type="Sprite" parent="."]
position = Vector2( 16.617, 33.9411 )
scale = Vector2( 0.116117, 0.116117 )
texture = ExtResource( 2 )

[node name="MenuSelecter_MainMenu" type="Sprite" parent="."]
position = Vector2( 16.9706, 61.1647 )
scale = Vector2( 0.116117, 0.116117 )
texture = ExtResource( 2 )
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
